--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./bootstrap.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
 <!----------------------------------------------------------- END OF NAVBAR -------------------------------------------->
@@ -69,7 +69,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="./tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="../public/images/tshirt.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -98,7 +98,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="./tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="../public/images/tshirt2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -127,7 +127,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="./tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="../public/images/tshirt3.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -157,7 +157,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="./tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="../public/images/tshirt4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
