--- a/views/dashboard-withComments.handlebars
+++ b/views/dashboard-withComments.handlebars
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
 <!----------------------------------------------------------- END OF NAVBAR -------------------------------------------->
@@ -54,7 +54,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="./tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="../public/images/tshirt.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
