--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -7,36 +7,12 @@
     <title>Dashboard 4</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="../public/styles/styles.css">
 </head>
 <body>
-<!----------------------------------------------------------- END OF NAVBAR -------------------------------------------->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">CoHoots</a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-      
-          <div class="collapse navbar-collapse" id="navbarColor01">
-            <ul class="navbar-nav me-auto">
-              <li class="nav-item">
-                <a class="nav-link active" href="#">Home
-                  <span class="visually-hidden">(current)</span>
-                </a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Login</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </nav>
-<!----------------------------------------------------------- END OF NAVBAR -------------------------------------------->
+
 
 
 <div style="display: flex; justify-content: center; margin-top: 4%;">
@@ -69,7 +45,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="../public/images/tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="/images/tshirt.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -98,7 +74,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="../public/images/tshirt2.jpeg" class="card-img-top" alt="...">
+                    <img src="/images/tshirt2.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -127,7 +103,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="../public/images/tshirt3.jpeg" class="card-img-top" alt="...">
+                    <img src="/images/tshirt3.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -157,7 +133,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="../public/images/tshirt4.jpeg" class="card-img-top" alt="...">
+                    <img src="/images/tshirt4.jpeg" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
