routing upload a design button to dashboard-submit upload handlebar screen

--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -14,7 +14,8 @@
 <body>
 
 <div style="margin-top: 3%; display: flex; justify-content: center;">
-    <button type="button" class="btn btn-primary">Upload a Design</button>
+    <button type="button" class="btn btn-primary"><a href="dashboard/upload">Upload a Design</a></button>
+    
     
 </div>
 
