--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -48,7 +48,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -77,7 +77,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -106,7 +106,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -136,7 +136,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
