--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -36,7 +36,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -93,7 +93,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost 10$</span>
+                        <span>Cost $10</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
