--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,9 @@
-<div class="col-sm-8 container-fluid mt-5 border border-dark p-4">
-      <form class="mb-4" id="login-form">
+<div class="col-sm-6 container-fluid mt-5 border border-dark p-4">
+      <form class="mb-4 container-fluid" id="login-form">
         <div class="form-group mb-4">
           <h3 class="display-6">Login</h3>
           <hr class="my-4">
-          <label for="username" class="h5">Username</label>
+          
           <input
             type="text"
             class="form-control"
@@ -12,13 +12,13 @@
           />
         </div>
         <div class="form-group mb-4">
-          <label for="password" class="h5">Password</label>
+        
           <input type="password" class="form-control" placeholder="Password"
           id="password-input-login"
            />
         </div>
 
-        <input type="submit" value="Login!" class="btn btn-dark w-100 mb-1" />
+        <input type="submit" value="Login!" class="btn btn-primary w-100 mb-1" />
         <a href="/signup" class="h6">Sign up instead</a>
       </form>
 </div>
