--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,28 +1,67 @@
-<div class="col-sm-8 container-fluid mt-5 border border-dark p-4">
-      <form class="mb-4" id="signup-form">
+<div class="col-sm-6 container-fluid mt-5 border border-dark p-4">
+      <form class="mb-4 container-fluid" id="signup-form">
         <div class="form-group mb-4">
              <h3 class="display-6">Sign Up</h3>
              <hr class="my-4">
-          <label for="username" class="h5">Username</label>
+             
+{{!-- Username --}}
           <input
             type="text"
             class="form-control"
-            placeholder="Enter username"
+            placeholder="Enter Username"
             id="username-input-signup"
           />
         </div>
+
+     {{!-- Password --}}
         <div class="form-group mb-4">
-          <label for="password" class="h5">Password</label>
           <input type="password" class="form-control" placeholder="Password"
           id="password-input-signup" />
         </div>
+
+    {{!-- First Name--}}
         <div class="form-group mb-4">
-          <label for="first-name" class="h5">Password</label>
-          <input type="password" class="form-control" placeholder="Password"
-          id="password-input-signup" />
+          <input type="first-name" class="form-control" placeholder="First Name"
+          id="first-name-signup" />
+          </div>
+
+    {{!-- Last Name--}}
+        <div class="form-group mb-4">
+           <input type="last-name" class="form-control" placeholder="Last Name"
+          id="last-name-signup" />
         </div>
-{{!-- Need first name, last name, street address, city, state, zip, email --}}
-        <input type="submit" value="Sign Up!" class="btn btn-dark w-100 mb-1" />
-        <p>Have An Account?<a href="/login" class="h6"> Login</a></p>
-      </form>
-    </div>
+
+        {{!-- Street Address --}}
+        <div class="form-group mb-4">
+           <input type="street-address" class="form-control" placeholder="Street Address"
+          id="street-address-signup" />
+        </div>
+  
+  {{!-- City --}}
+<div class="form-group mb-4">
+           <input type="city" class="form-control" placeholder="City"
+          id="city-signup" />
+        </div>
+
+  {{!-- State --}}
+<div class="form-group mb-4">
+           <input type="state" class="form-control" placeholder="State"
+          id="state-signup" />
+        </div>
+        
+  {{!-- Zip --}}
+<div class="form-group mb-4">
+           <input type="zip" class="form-control" placeholder="Zip"
+          id="zip-signup" />
+        </div>
+
+  {{!-- Email --}}
+<div class="form-group mb-4">
+           <input type="email" class="form-control" placeholder="Email"
+          id="email-signup" />
+        </div>
+
+        <input type="submit" value="Sign Up!" class="btn btn-primary w-100 mb-1" />
+        <p>Have An Account? <a href="/login" class="h6">Login</a></p>
+    </form>
+</div>
