--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -22,7 +22,7 @@
               <p class="card-text">Drag in a file or click to browse</p>
             </div>
             <div style="display: flex; justify-content: center; margin-top: 5%;">
-                <button type="button" class="btn btn-primary">Submit</button>
+                <button type="button" class="btn btn-primary" id="submitUpload">Submit</button>
             </div>
         </div>
       </div>
@@ -154,11 +154,6 @@
    
 </div>
 
-
-
-
-
-
-
 </body>
+    <script src="/js/upload.js"></script>
 </html>
