--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
  <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
- <link rel="stylesheet" href="./bootstrap.min.css">
+ <link rel="stylesheet" href="/styles/bootstrap.min.css">
   <link rel="stylesheet" href="/styles/styles.css" media="screen" title="no title" charset="utf-8">
   <title>CoHoots</title>
 </head>
