updated changes to signup.handlebars

--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -16,11 +16,11 @@
     {{!-- First Name--}}
     <div class="row">
       <div class="col">
-        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
+        <input type="text" class="form-control" placeholder="First name" id="first-name-signup" aria-label="First name">
       </div>
       {{!-- Last Name --}}
       <div class="col">
-        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
+        <input type="text" class="form-control" placeholder="Last name" id="last-name-signup" aria-label="Last name">
       </div>
     </div>
     <br>
@@ -32,13 +32,13 @@
     {{!-- City --}}
     <div class="row">
       <div class="col">
-        <input type="text" class="form-control" placeholder="City" aria-label="City">
+        <input type="text" class="form-control" placeholder="City" id="city-signup" aria-label="City">
       </div>
       <div class="col">
-        <input type="text" class="form-control" placeholder="state" aria-label="state">
+        <input type="text" class="form-control" placeholder="state" id="state-signup" aria-label="state">
       </div>
       <div class="col">
-        <input type="text" class="form-control" placeholder="zip" aria-label="zip">
+        <input type="text" class="form-control" placeholder="zip" id="zip-signup" aria-label="zip">
       </div>
     </div>
     <br>
