--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -1,23 +1,25 @@
 <div style="margin-top: 3%; display: flex; justify-content: center;">
     <button type="button" class="btn btn-primary"><a href="dashboard/upload" style="text-decoration: none; color: inherit;">Upload a Design</a></button>
-    
 </div>
+
+
+{{#each designs}}
 <div class="row">
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
                 <ul class="list-group list-group-flush">
                     <div class="top-card">
-                        <span>Posted by Brax</span>
+                        <span>Posted by {{user.username}}</span>
                         <span>5/18/2021</span>
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="/images/tshirt.jpeg" class="card-img-top" alt="...">
+                    <img src="{{image_url}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
-                        <span>Cost $10</span>
+                        <span>Cost ${{price}}</span>
                         <span><i class="bi bi-trash"></i></span>
                     </div>
                 </div>
@@ -30,6 +32,7 @@
             </div>
         </div>
     </div>
+    {{/each}}
 
 
     <div class="col-md-3">
@@ -59,7 +62,7 @@
             </div>
         </div>
     </div>
-
+{{!-- 
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
@@ -115,6 +118,6 @@
                 </ul> 
             </div>
         </div>
-    </div>
+    </div> --}}
 
 </div>
