added bootstrap icon CDN to handlebars main file to render icons

--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -3,8 +3,8 @@
 </div>
 
 
-{{#each designs}}
 <div class="row">
+    {{#each designs}}
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
@@ -15,7 +15,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="{{image_url}}" class="card-img-top" alt="...">
+                    <img src="{{image_url}}" class="card-img-top alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -34,90 +34,5 @@
     </div>
     {{/each}}
 
-
-    <div class="col-md-3">
-        <div class="card-placement">
-            <div class="card" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
-                    <div class="top-card">
-                        <span>Posted by Kris</span>
-                        <span>5/18/2021</span>
-                        <span>8:15PM</span>
-                    </div>
-                </ul>
-                    <img src="/images/tshirt2.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-middle">
-                        <span>5</span>
-                        <span>Cost $10</span>
-                        <span><i class="bi bi-trash"></i></span>
-                    </div>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <div class="card-bottom">
-                        <span><a href="#">Click to view 3 comments</a></span>
-                        <span><i class="bi bi-chat-left-dots"></i></span>
-                    </div>
-                </ul> 
-            </div>
-        </div>
-    </div>
-{{!-- 
-    <div class="col-md-3">
-        <div class="card-placement">
-            <div class="card" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
-                    <div class="top-card">
-                        <span>Posted by Karen</span>
-                        <span>5/18/2021</span>
-                        <span>8:15PM</span>
-                    </div>
-                </ul>
-                    <img src="/images/tshirt3.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-middle">
-                        <span>5</span>
-                        <span>Cost $10</span>
-                        <span><i class="bi bi-trash"></i></span>
-                    </div>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <div class="card-bottom">
-                        <span><a href="#">Click to view 3 comments</a></span>
-                        <span><i class="bi bi-chat-left-dots"></i></span>
-                    </div>
-                </ul> 
-            </div>
-        </div>
-    </div>
-
-
-    <div class="col-md-3">
-        <div class="card-placement">
-            <div class="card" style="width: 18rem;">
-                <ul class="list-group list-group-flush">
-                    <div class="top-card">
-                        <span>Posted by Salome</span>
-                        <span>5/18/2021</span>
-                        <span>8:15PM</span>
-                    </div>
-                </ul>
-                    <img src="/images/tshirt4.jpeg" class="card-img-top" alt="...">
-                <div class="card-body">
-                    <div class="card-middle">
-                        <span>5</span>
-                        <span>Cost $10</span>
-                        <span><i class="bi bi-trash"></i></span>
-                    </div>
-                </div>
-                <ul class="list-group list-group-flush">
-                    <div class="card-bottom">
-                        <span><a href="#">Click to view 3 comments</a></span>
-                        <span><i class="bi bi-chat-left-dots"></i></span>
-                    </div>
-                </ul> 
-            </div>
-        </div>
-    </div> --}}
 
 </div>
