--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -5,6 +5,7 @@
 
 <div class="row">
     {{#each designs}}
+    <input type="hidden" name="design-id" value="{{id}}" />
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
@@ -20,7 +21,7 @@
                     <div class="card-middle">
                         <span>5</span>
                         <span>Cost ${{price}}</span>
-                        <span><i class="bi bi-trash"></i></span>
+                        <span><i class="bi bi-trash" id="deleteBtn"></i></span>
                     </div>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -33,6 +34,6 @@
         </div>
     </div>
     {{/each}}
-
-
 </div>
+
+<script src="/js/deleteDesign.js"></script>
