added styling so that all image uploads render the same size

--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -16,7 +16,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="{{image_url}}" class="card-img-top alt="...">
+                    <img src="{{image_url}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <div class="card-bottom">
-                        <span><a href="#">Click to view 3 comments</a></span>
+                        <span><a href="#">View comments</a></span>
                         <span><i class="bi bi-chat-left-dots"></i></span>
                     </div>
                 </ul> 
