added route to view all designs on home page

--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -1,1 +1,36 @@
-<h1 class="text-center">ALL EXISTING DESIGNS</h1>
+{{!-- <h1 class="text-center">ALL EXISTING DESIGNS</h1> --}}
+
+<div class="row">
+    {{#each designs}}
+    <input type="hidden" name="design-id" value="{{id}}" />
+    <div class="col-md-3">
+        <div class="card-placement">
+            <div class="card" style="width: 18rem;">
+                <ul class="list-group list-group-flush">
+                    <div class="top-card">
+                        <span>Posted by {{user.username}}</span>
+                        <span>5/18/2021</span>
+                        <span>8:15PM</span>
+                    </div>
+                </ul>
+                    <img src="{{image_url}}" class="card-img-top" alt="...">
+                {{!-- <div class="card-body">
+                    <div class="card-middle">
+                        <span>5</span>
+                        <span>Cost ${{price}}</span>
+                        <span><i class="bi bi-trash" id="deleteBtn"></i></span>
+                    </div>
+                </div> --}}
+                {{!-- <ul class="list-group list-group-flush">
+                    <div class="card-bottom">
+                        <span><a href="#">View comments</a></span>
+                        <span><i class="bi bi-chat-left-dots"></i></span>
+                    </div>
+                </ul>  --}}
+            </div>
+        </div>
+    </div>
+    {{/each}}
+</div>
+
+<script src="/js/deleteDesign.js"></script>
