adding to main so team can have it

--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -3,6 +3,8 @@
 </div>
 
 
+
+
 <div class="row">
     {{#each designs}}
     <input type="hidden" name="design-id" value="{{id}}" />
@@ -16,17 +18,17 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="{{image_url}}" class="card-img-top" alt="...">
+                    <img src="{{image_url}}" class="card-img-top alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
                         <span>Cost ${{price}}</span>
-                        <span><i class="bi bi-trash" id="deleteBtn"></i></span>
+                        <span><i type="icon" class="bi bi-trash" id="delete-btn"></i></span>
                     </div>
                 </div>
                 <ul class="list-group list-group-flush">
                     <div class="card-bottom">
-                        <span><a href="#">View comments</a></span>
+                        <span><a href="#">View Comments</a></span>
                         <span><i class="bi bi-chat-left-dots"></i></span>
                     </div>
                 </ul> 
@@ -36,4 +38,5 @@
     {{/each}}
 </div>
 
-<script src="/js/deleteDesign.js"></script>
+
+
