--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -1,18 +1,52 @@
-  
-<div style="display: flex; justify-content: center; margin-top: 4%;">
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <div class="card-body" style="background-color: #7B8A8B; height: 150px;">
-              
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://bootswatch.com/5/flatly/bootstrap.min.css">
+    <link rel="stylesheet" href="./bootstrap.min.css">
+    <link rel="stylesheet" href="../public/styles/styles.css">
+</head>
+<body>
+
+<div class="container">
+      <div class="row">
+        <div class="col-sm-8 mt-3">
+
+          <form
+            class="mt-4"
+            action="/api/upload"
+            method="POST"
+            enctype="multipart/form-data"
+          >
+            <div class="form-group">
+              <input
+                type="file"
+                name="file"
+                accept='image/*'
+                id="input-files"
+                class="form-control-file border"
+              />
             </div>
-            <div style="display: flex; justify-content: center; margin-top: 5%;">
-                <button type="button" class="btn btn-primary" id="submitUpload">Submit</button>
-            </div>
+            <button type="submit" class="btn btn-primary" id="upload-btn">Submit</button>
+          </form>
         </div>
       </div>
-</div>
+      <hr />
+      <div class="row">
+        <div class="col-sm-12">
+          <div class="preview-images"></div>
+        </div>
+      </div>
+    </div>
 
 <div class="row">
+
+
+
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
@@ -129,8 +163,33 @@
         </div>
     </div>
 
+    
+   
 </div>
 
 </body>
-    <script src="/js/upload.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+<script>
+    $(document).ready(function() {
+    let imagesPreview = function(input, placeToInsertImagePreview) {
+        if (input.files) {
+            let filesAmount = input.files.length;
+            for (i = 0; i < filesAmount; i++) {
+              let reader = new FileReader();
+              reader.onload = function(event) {
+                $($.parseHTML("<img>"))
+                  .attr("src", event.target.result)
+                  .appendTo(placeToInsertImagePreview);
+              };
+              reader.readAsDataURL(input.files[i]);
+            }
+          }
+        };
+        $("#input-files").on("change", function() {
+          imagesPreview(this, "div.preview-images");
+        });
+      });
+</script>
+<script src="/js/upload.js"></script>
 </html>
