--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -1,4 +1,6 @@
-{{!-- <h1 class="text-center">ALL EXISTING DESIGNS</h1> --}}
+<div style="margin-top: 3%; display: flex; justify-content: center;">
+    <button type="button" class="btn btn-primary"><a href="dashboard/upload" style="text-decoration: none; color: inherit;">Upload a Design</a></button>
+</div>
 
 <div class="row">
     {{#each designs as |design|}}
