--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -14,7 +14,7 @@
                     </div>
                 </ul>
                     <img src="{{design.image_url}}" class="card-img-top" alt="...">
-                <div class="card-body">
+                {{!-- <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
                         <span>Cost ${{design.price}}</span>
@@ -27,7 +27,7 @@
                         <span><i class="bi bi-chat-left-dots"></i></span>
                     </div>
                 </ul> 
-            </div>
+            </div> --}}
         </div>
     </div>
     {{/each}}
