got rid of scroll on the bottom

--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -2,7 +2,7 @@
     <button type="button" class="btn btn-primary"><a href="dashboard/upload" style="text-decoration: none; color: inherit;">Upload a Design</a></button>
 </div>
 
-<div class="row">
+<div class="row container-fluid">
     {{#each designs as |design|}}
     <input type="hidden" id="design-id" value="{{design.id}}" />
     <div class="col-md-3">
@@ -10,6 +10,7 @@
             <div class="card" style="width: 18rem;">
                 <ul class="list-group list-group-flush">
                     <div class="top-card">
+                        <span>Uploaded:</span>
                         <span>5/18/2021</span>
                         <span>8:15PM</span>
                     </div>
