--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -1,6 +1,6 @@
 {{!-- <h1 class="text-center">ALL EXISTING DESIGNS</h1> --}}
 
-<div class="row">
+<div class="row container-fluid">
     {{#each designs as |design|}}
     <input type="hidden" id="design-id" value="{{design.id}}" />
     <div class="col-md-3">
