--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -12,7 +12,7 @@
       </div>
 </div>
 
-<div class="row">
+<div class="row container-fluid">
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
