--- a/views/dashboard-uploadButton.handlebars
+++ b/views/dashboard-uploadButton.handlebars
@@ -2,9 +2,6 @@
     <button type="button" class="btn btn-primary"><a href="dashboard/upload" style="text-decoration: none; color: inherit;">Upload a Design</a></button>
 </div>
 
-
-
-
 <div class="row">
     {{#each designs}}
     <input type="hidden" name="design-id" value="{{id}}" />
@@ -23,7 +20,7 @@
                     <div class="card-middle">
                         <span>5</span>
                         <span>Cost ${{price}}</span>
-                        <span><i type="icon" class="bi bi-trash" id="delete-btn"></i></span>
+                        <span><i type="icon" class="bi bi-trash" id="deleteBtn"></i></span>
                     </div>
                 </div>
                 <ul class="list-group list-group-flush">
@@ -39,4 +36,6 @@
 </div>
 
 
+<script src="/js/logout.js"></script>
+<script src="/js/deleteDesign.js"></script>
 
