--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,8 +32,8 @@
           <li class="nav-item">
             <a class="nav-link" href="/login">Login</a>
           </li>
-          {{!-- <li class="nav-item">
-            <a class="nav-link" href="" id="logout">Logout</a> --}}
+          <li class="nav-item">
+            <a class="nav-link" href="" id="logout">Logout</a>
           </li>
         </ul>
       </div>
