--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -32,7 +32,7 @@
           <a class="nav-link" href="/login">Login</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="" id="logout">Logout</a>
+          <a class="nav-link" href="/logout" id="logout">Logout</a>
         </li>
       </ul>
     </div>
