--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -26,7 +26,7 @@
                 </div>
                 <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-between; padding: 3%;">
-                        <span><a href="#">View comments</a></span>
+                        <span><a href="/api/comments/{{design.id}}">View comments</a></span>
                         <span><i class="bi bi-chat-left-dots"></i></span>
                     </div>
                 </ul> 
