rendering comments to a handlebar file based on which design is clicked

--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -15,6 +15,12 @@
                     </div>
                 </ul>
                     <img src="{{design.image_url}}" class="card-img-top" alt="..." style="height: 300px;">
+               <ul class="list-group list-group-flush">
+                    <div style="display: flex; justify-content: space-between; padding: 3%;">
+                        <span><a href="/api/comments/{{design.id}}">View comments</a></span>
+                        <span><i class="bi bi-chat-left-dots"></i></span>
+                    </div>
+                </ul> 
  
             </div>
         </div>
@@ -24,5 +30,3 @@
 
 <script src="/js/deleteDesign.js"></script>
 
-
-<script src="/js/deleteDesign.js"></script>
