--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -1,18 +1,28 @@
   
 <div style="display: flex; justify-content: center; margin-top: 4%;">
     <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <div class="card-body" style="background-color: #7B8A8B; height: 150px;">
-              
+        <div class="card-body text-center">
+            <div class="card-body mb-2" style="background-color: #7B8A8B; height: 150px;">
+              Drag in a file or <button type="button">Click to browse..</button>
             </div>
+            <div class="form-group">
+  <div class="form-group">
+    <div class="input-group mb-3">
+      <span class="input-group-text">$</span>
+      <input type="text" class="form-control" id="price-input" aria-label="Amount (to the nearest dollar)" placeholder="Price">
+      <span class="input-group-text">.00</span>
+    </div>
+  </div>
+</div>
+
             <div style="display: flex; justify-content: center; margin-top: 5%;">
-                <button type="button" class="btn btn-primary" id="submitUpload">Submit</button>
+                <button type="button" class="btn btn-primary" id="submit-upload">Submit</button>
             </div>
         </div>
       </div>
 </div>
 
-<div class="row container-fluid">
+{{!-- <div class="row container-fluid">
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" style="width: 18rem;">
@@ -129,7 +139,7 @@
         </div>
     </div>
 
-</div>
+</div> --}}
 
 </body>
     <script src="/js/upload.js"></script>
