adding form to create a comment

--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -18,7 +18,10 @@
                <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-between; padding: 3%;">
                         <span><a href="/api/comments/{{design.id}}">View comments</a></span>
-                        <span><i class="bi bi-chat-left-dots"></i></span>
+                    </div>
+                    <div class="input-group input-group-sm mb-3" style="padding-left:2%; padding-right:2%">
+                        <input type="text" class="form-control" aria-label="Sizing example input" placeholder="Leave a Comment" aria-describedby="inputGroup-sizing-sm">
+                        <button type="button" class="btn btn-light" style="margin-left: 2%">Send</button>
                     </div>
                 </ul> 
             </div>
