--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -19,10 +19,13 @@
                     <div style="display: flex; justify-content: space-between; padding: 3%;">
                         <span><a href="/api/comments/{{design.id}}">View comments</a></span>
                     </div>
-                    <div class="input-group input-group-sm mb-3" style="padding-left:2%; padding-right:2%">
-                        <input type="text" class="form-control" aria-label="Sizing example input" placeholder="Leave a Comment" aria-describedby="inputGroup-sizing-sm">
-                        <button type="button" class="btn btn-light" style="margin-left: 2%">Send</button>
-                    </div>
+                    <form id="commentForm">
+                        <input type="hidden" id="design-id" value="{{design.id}}" />
+                        <div class="input-group input-group-sm mb-3" style="padding-left:2%; padding-right:2%">
+                            <input type="text" id="comment-body" class="form-control" aria-label="Sizing example input" placeholder="Leave a Comment" aria-describedby="inputGroup-sizing-sm">
+                            <button type="submit" class="btn btn-light" style="margin-left: 2%">Send</button>
+                        </div>
+                    </form>
                 </ul> 
             </div>
         </div>
@@ -30,5 +33,5 @@
     {{/each}}
 </div>
 
-<script src="/js/deleteDesign.js"></script>
+<script src="/js/comment.js"></script>
 
