--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -15,7 +15,7 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="{{design.image_url}}" class="card-img-top" alt="...">
+                    <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" alt="...">
                 <div class="card-body">
                     <div class="card-middle">
                         <span>5</span>
