added functionality from rest of group

--- a/views/showComments.handlebars
+++ b/views/showComments.handlebars
@@ -8,7 +8,7 @@
                         <span>Uploaded By: {{designs.user.username}}</span>
                     </div>
                 </ul>
-                    <img src="{{designs.image_url}}" class="card-img-top" alt="..." style="height: 300px;">
+                    <img src="data:image/jpeg;base64,{{designs.data}}" class="card-img-top" alt="..." style="height: 300px;">
                <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-between; padding: 3%;">
 
