--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -14,9 +14,22 @@
                         <span>Uploaded By: {{user.username}}</span>
                     </div>
                 </ul>
-                    <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" id = "{{design.id}}" alt="...">
+                <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" id = "{{design.id}}" alt="..." style="height: 300px;">
+                <ul class="list-group list-group-flush">
+                    <div style="display: flex; justify-content: space-between; padding: 3%;">
+                        <span><a href="/api/comments/{{design.id}}">View comments</a></span>
+                    </div>
+                    <form id="commentForm">
+                        <input type="hidden" id="design-id" value="{{design.id}}" />
+                        <div class="input-group input-group-sm mb-3" style="padding-left:2%; padding-right:2%">
+                            <input type="text" id="comment-body" class="form-control" aria-label="Sizing example input" placeholder="Leave a Comment" aria-describedby="inputGroup-sizing-sm">
+                            <button type="submit" class="btn btn-light" style="margin-left: 2%">Send</button>
+                        </div>
+                    </form>
+                </ul> 
             </div>
-        </div>    
+        </div>
+    </div>  
     {{/each}}
 </div>
 
