--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -3,12 +3,12 @@
     <button type="button" class="btn btn-primary"><a href="dashboard/upload" style="text-decoration: none; color: inherit;">Upload a Design</a></button>
 </div>
 
-<div class="row container-fluid" style="margin-top: 5%;">
+<div class="row container-fluid" id="tshirt" style="margin-top: 5%;">
     {{#each designs as |design|}}
     <input type="hidden" id="design-id" value="{{design.id}}" />
     <div class="col-md-3">
         <div class="card-placement">
-            <div class="card" style="width: 18rem;">
+            <div class="card" id={{design.cardId}} style="width: 18rem;">
                 <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-evenly; padding-top: 3%; padding-bottom: 3%;">
                         <span>Uploaded: 5/18/2021</span>
@@ -16,19 +16,20 @@
                         <span>8:15PM</span>
                     </div>
                 </ul>
-                    <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" alt="...">
+                    <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" alt="..." style="height: 300px;">
                 <div class="card-body">
                     <div style="display: flex; justify-content: space-between">
                         <span>5</span>
                         <span>Cost ${{design.price}}</span>
-                        <span><i class="bi bi-trash" id="delete-btn"></i></span>
+                        <span><i class="bi bi-trash delete-btn" id={{design.id}}></i></span>
                     </div>
                 </div>
- 
             </div>
         </div>
     </div>
     {{/each}}
 </div>
-
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"
+  integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="
+  crossorigin="anonymous"></script>
 <script src="/js/deleteDesign.js"></script>
