able to upload price again after including price column in Design model

--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -1,6 +1,6 @@
 <div class="row container-fluid" style="margin-top: 5%;" id="design">
     {{#each designs as |design|}}
-    {{!-- <input type="hidden" id={{design.id}} value={{design.id}} /> --}}
+    <input type="hidden" id={{design.id}} value={{design.id}} />
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" id={{design.id}} style="width: 18rem;">
