--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -12,16 +12,11 @@
       <input type="text" class="form-control" id="price-input" aria-label="Amount (to the nearest dollar)" placeholder="Price">
       <span class="input-group-text">.00</span>
     </div>
+     <button type="submit" class="btn btn-primary" id="upload-btn">Submit</button>
   </div>
 </div>
 
 {{!-- BRAXTON'S STUFF --}}
-            <div style="display: flex; justify-content: center; margin-top: 5%;">
-                <button type="button" class="btn btn-primary" id="submit-upload">Submit</button>
-<div class="container">
-      <div class="row">
-        <div class="col-sm-8 mt-3">
-
           <form
             class="mt-4"
             action="/api/upload"
@@ -46,35 +41,10 @@
         <div class="col-sm-12">
           <div class="preview-images"></div>
         </div>
-      </div>
-    </div>
-
-
-</div>
+ 
 
 </body>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.bundle.min.js"></script>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script>
-    $(document).ready(function() {
-    let imagesPreview = function(input, placeToInsertImagePreview) {
-        if (input.files) {
-            let filesAmount = input.files.length;
-            for (i = 0; i < filesAmount; i++) {
-              let reader = new FileReader();
-              reader.onload = function(event) {
-                $($.parseHTML("<img>"))
-                  .attr("src", event.target.result)
-                  .appendTo(placeToInsertImagePreview);
-              };
-              reader.readAsDataURL(input.files[i]);
-            }
-          }
-        };
-        $("#input-files").on("change", function() {
-          imagesPreview(this, "div.preview-images");
-        });
-      });
-</script>
 <script src="/js/upload.js"></script>
 </html>
