--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -5,7 +5,7 @@
 
 <div class="row container-fluid" id="tshirt" style="margin-top: 5%;">
     {{#each designs as |design|}}
-    {{!-- <input type="hidden" id="design-id" value="{{design.id}}" /> --}}
+    <input type="hidden" id="design-id" value="{{design.id}}" />
     <div class="col-md-3">
         <div class="card-placement">
             <div class="card" id={{design.cardId}} style="width: 18rem;">
