successfully combined upload-routes with design-routes to include both price and image in one post route

--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -19,7 +19,7 @@
 {{!-- BRAXTON'S STUFF --}}
           <form
             class="mt-4"
-            action="/api/upload"
+            action="/api/designs"
             method="POST"
             enctype="multipart/form-data"
           >
