adding dates to design uploads and comments

--- a/views/showComments.handlebars
+++ b/views/showComments.handlebars
@@ -18,7 +18,7 @@
                      <div class="border" style="background-color: #ECF0F1;">
                         <div class="card-bottom">
                             <span>{{user.username}}</span>
-                             <span>9:30PM</span>
+                             <span>{{format_date createdAt}}</span>
                     </div>
                     <div style="padding-left: 3%;">
                         {{body}}
