--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -7,6 +7,7 @@
                 <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-evenly; padding-top: 3%; padding-bottom: 3%;">
                         <span>Uploaded By: {{user.username}}</span>
+                        <span>{{format_date design.createdAt}}</span>
                     </div>
                 </ul>
                     <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" id="{{design.id}}" alt="..." style="height: 300px;">
