adding dates to design uploads and comments

--- a/views/all-user-designs.handlebars
+++ b/views/all-user-designs.handlebars
@@ -11,9 +11,8 @@
             <div class="card" id={{design.cardId}} style="width: 18rem;">
                 <ul class="list-group list-group-flush">
                     <div style="display: flex; justify-content: space-evenly; padding-top: 3%; padding-bottom: 3%;">
-                        <span>Uploaded: 5/18/2021</span>
-                        {{!-- <span>5/18/2021</span> --}}
-                        <span>8:15PM</span>
+                        <span>Uploaded: {{ format_date design.createdAt}}</span>
+                        {{!-- <span>8:15PM</span> --}}
                     </div>
                 </ul>
                     <img src="data:image/jpeg;base64,{{design.data}}" class="card-img-top" alt="..." style="height: 300px;">
