--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,25 +1,28 @@
 <div class="col-sm-6 container-fluid mt-5 border border-dark p-4">
-      <form class="mb-4 container-fluid" id="login-form">
-        <div class="form-group mb-4">
-          <h3 class="display-6">Login</h3>
-          <hr class="my-4">
-          
-          <input
-            type="text"
-            class="form-control"
-            placeholder="Enter username"
-            id="username-input-login"
-          />
-        </div>
-        <div class="form-group mb-4">
-        
-          <input type="password" class="form-control" placeholder="Password"
-          id="password-input-login"
-           />
-        </div>
+  <form class="mb-4 container-fluid" id="login-form">
+    <div class="form-group mb-4">
+      <h3 class="display-6">Login</h3>
+      <hr class="my-4" />
 
-        <input type="submit" value="Login!" class="btn btn-primary w-100 mb-1" />
-        <a href="/signup" class="h6">Sign up instead</a>
-      </form>
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Enter username"
+        id="username-input-login"
+      />
+    </div>
+    <div class="form-group mb-4">
+
+      <input
+        type="password"
+        class="form-control"
+        placeholder="Password"
+        id="password-input-login"
+      />
+    </div>
+
+    <input type="submit" value="Login!" class="btn button-color w-100 mb-1" />
+    <a href="/signup" class="h6">Sign up instead</a>
+  </form>
 </div>
 <script src="/js/login.js"></script>
