--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -45,4 +45,5 @@
 <script src="/js/logout.js"></script>
 <script src="/js/like.js"></script>
 <script src="/js/comment.js"></script>
+<script src="/js/deleteDesign.js"></script>
 </html>
