styling, got the number of likes to display

--- a/views/all-designs.handlebars
+++ b/views/all-designs.handlebars
@@ -22,7 +22,7 @@
                         <button type='submit' class='like-btn'>🤍</button>
                     {{/if}}
                     </form>
-                    <span class='numlikes' style="display: flex; justify-self: start">x likes</span>
+                    <span class='numlikes' style="display: flex; justify-self: start">{{design.likes.length}} likes</span>
                 </div>
                 <span class="cost">Cost ${{design.price}}</span>
                 <form id="commentForm">
