reverted to original colors and added margin-bottom to card so there are no weird conflictions with footer

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -27,8 +27,8 @@
     <title>CoHoots</title>
   </head>
 
-  <body>
-    <nav class="navbar navbar-expand-lg navbar-dark my-nav">
+  <body class="bg-light">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
       <div class="container-fluid">
         <a class="navbar-brand" href="/">CoHoots</a>
         <button
@@ -64,7 +64,7 @@
     </nav>
     {{{body}}}
 
-    <div class="footer">
+    <div class="footer bg-primary">
       <p>Copyright © 2021: Team Nasty. All rights reserved.</p>
     </div>
   </body>
