--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -21,7 +21,7 @@
       />
     </div>
 
-    <input type="submit" value="Login!" class="btn button-color w-100 mb-1" />
+    <input type="submit" value="Login!" class="btn btn-primary w-100 mb-1" />
     <a href="/signup" class="h6">Sign up instead</a>
   </form>
 </div>
