--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -97,7 +97,7 @@
       />
     </div>
 
-    <input type="submit" value="Sign Up!" class="btn button-color w-100 mb-1" />
+    <input type="submit" value="Sign Up!" class="btn btn-primary w-100 mb-1" />
     <p>Have An Account? <a href="/login" class="h6">Login</a></p>
   </form>
 </div>
