--- a/views/dashboard-submitUpload.handlebars
+++ b/views/dashboard-submitUpload.handlebars
@@ -29,7 +29,7 @@
       <input type="text" class="form-control" id="price-input" aria-label="Amount (to the nearest dollar)" placeholder="Price">
       <span class="input-group-text">.00</span>
     </div>
-            <button type="submit" class="btn button-color" id="upload-btn">Submit</button>
+            <button type="submit" class="btn btn-primary" id="upload-btn">Submit</button>
           </form>
         </div>
       </div>
