--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -64,9 +64,9 @@
     </nav>
     {{{body}}}
 
-    <div class="footer bg-primary">
+    {{!-- <div class="footer bg-primary">
       <p>Copyright © 2021: Team Nasty. All rights reserved.</p>
-    </div>
+    </div> --}}
   </body>
   <script
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
