--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -38,15 +38,15 @@ img {
   height: 300px;  
   }
 
-.footer {
-    position: fixed;
+/* .footer {
+    position: relative;
     left: 0;
     bottom: 0;
     width: 100%;
     color: white;
     text-align: center;
-    padding: 0.8em
-  }
+    padding: 0.5em
+  } */
 
 body {
   font-family: 'Fredoka One', cursive;
